--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "blue-bar",
+  "name": "torque-learn-cms",
+  "version": "1.0.0",
   "type": "module",
-  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^5.13.7",
-    "decap-cms-app": "^3.8.3"
+    "astro": "^2.10.0",
+    "zod": "^3.25.0"
   }
 }
