--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,6 @@
 [build]
   command = "npm run build"
   publish = "dist"
-  environment = { NODE_VERSION = "20" }
-
-# Optional: redirect all client-side routes to index.html (needed for SPA-like routing)
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  environment = { 
+    NODE_VERSION = "22" 
+}
