--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^2.10.0",
+    "astro": "5.13.17",
     "zod": "^3.25.0"
   }
 }
