--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   command = "npm run build"
   publish = "dist"
   environment = { NODE_VERSION = "20" }
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
