--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.7",
-    "decap-cms-app": "^3.8.3"
+    "astro": "^5.15.9",
+    "astro-pagefind": "^1.8.5",
+    "decap-cms-app": "^3.9.0",
+    "pagefind": "^1.4.0"
   }
 }
