--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   command = "npm run build"
   publish = "dist"
   environment = { NODE_VERSION = "20" }
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/*"
