--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "^5.15.9",
     "astro-pagefind": "^1.8.5",
     "decap-cms-app": "^3.9.0",
+    "node-fetch": "^2.7.0",
     "pagefind": "^1.4.0"
   }
 }
